fix spacing and image aspect ratio preview

--- a/src/components/RichEditor/styles.scss
+++ b/src/components/RichEditor/styles.scss
@@ -1,10 +1,11 @@
 .rich-editor {
   border: none;
   .tiptap.ProseMirror {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: var(--mantine-spacing-xs);
-    padding-bottom: var(--mantine-spacing-xs);
+    // padding-left: 0;
+    // padding-right: 0;
+    // padding-top: var(--mantine-spacing-xs);
+    // padding-bottom: var(--mantine-spacing-xs);
+    padding: 0;
     color: var(--mantine-color-default-color);
     color: var(--mantine-color-default-color) !important;
     font-size: var(--mantine-font-size-sm);
